Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-10 Kimmo
 Czech translation update from Jan Hryz
  Src/Languages/Czech/MergeCzech.rc
 PATCH: [ 1553714 ] Add new commandine switches to help dialog
  Src: Merge.rc MergeArgs.cpp resource.h
  Src/Languages/*: Merge*.rc

2006-09-08 Gal
 RFE: [ 1533506 ] Need commandline switch for single-instance
  Src: Merge.cpp 

2006-09-06 Kimmo
 PATCH: [ 1552901 ] Update VC loose filefilter
  Filters: Merge_VC_loose.flt
 PATCH: [ 1552917 ] Fix GUI for autocompletion option
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-09-05 Kimmo
 PATCH: [ 1552095 ] Fix last compare method not visible in GUI list
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-09-04 Takashi
 PATCH: [ 1551332 ] defer loading plugin
  Src: MainFrm.cpp Merge.rc MergeDoc.cpp MergeEditView.cpp MergeEditView.h
  Src/Languages/*: Merge*.rc

2006-09-04 Kimmo
 BUG: [ 1550427 ] WinMerge 2.5.5.7 don't save "Include subfoders by default"
  Src: PropRegistry.cpp

2006-09-01 Takashi
 Japanese translation - update
  Src/Languages/Japanese: MergeJapanese.rc

2006-08-28 Kimmo
 PATCH: [ 1544777 ] Compare by size
  Forgot to commit Options-dialog changes last time so option for this wasn't visible
  Src: PropCompare.cpp
 BUG: [ 1547262 ] Suspicious bit shift warning
  Fix from Gal
  Src/Common: UniFile.cpp

2006-08-27 Kimmo
 PATCH: [ 1547190 ] Fix VS2005 compile
  Src: MergeArgs.cpp

2006-08-26 Gal
 BUG: [ 1546938 ] New toolbar icons only works for 'disabled' icons
  Src/Languages/*/Merge*.rc

2006-08-25 Kimmo
 Fix compiling WinMerge after moving folders around (Merge7z moved under ArchiveSupport)
  Src: 7zCommon.h

***** Switch to Subversion *****

2006-08-24 WinMerge experimental release 2.5.5.7 (cvs)

2006-08-24 Kimmo
 PATCH: [ 1545411 ] Add some missing options to configlog
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp
 PATCH: [ 1545165 ] WinMarge Bulgarian Translation
  Submitted by tigertron