@@ -8,6 +8,8 @@ Add new items to top.
  PATCH: [ 1553714 ] Add new commandine switches to help dialog
   Src: Merge.rc MergeArgs.cpp resource.h
   Src/Languages/*: Merge*.rc
+ PATCH: [ 1552228 ] Don't use 'export' as variable name
+  Src: dllpstub.cpp
 
 2006-09-08 Gal
  RFE: [ 1533506 ] Need commandline switch for single-instance
